downgrade jdk version to 10